# wrocpp-05-2025

./: .gitmodules
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
examples/: CMakeLists.txt
examples/config/cmake/: stm32.cmake
examples/fragmented_heap_allocation_time/: CMakeLists.txt  main.cpp
examples/heap_allocation_time/: CMakeLists.txt  main.cpp
examples/just_new/: CMakeLists.txt  main.cpp
examples/mcu/: CMakeLists.txt  linker_script.ld  startup.s
examples/single_stack_variable/: CMakeLists.txt  main.cpp
examples/stack_allocation_time/: CMakeLists.txt  main.cpp
presentation/: CMakeLists.txt  presentation.tex  sources.bib
